clang/test/BSC/Negative/Method/Union/union_function_pointer_undeclared/union_function_pointer_undeclared.cbs
// RUN: %clang_cc1 -verify %s

union SimpleUnion {
  float uf;
  int ui;
  char uc;
};

int getA() { // expected-note {{'getA' declared here}}
             // expected-note@-1 {{'getA' declared here}}
  return 1;
}

int main() {
  int (*fp)() = union SimpleUnion::getA; // expected-error {{no member named 'getA' in 'union SimpleUnion'; did you mean simply 'getA'?}}
  int (*fp1)() = &union SimpleUnion::getA; // expected-error {{no member named 'getA' in 'union SimpleUnion'; did you mean simply 'getA'?}}
  return 0;
}